[gd_scene load_steps=6 format=3 uid="uid://gfj7ac0p3ue4"]

[ext_resource type="Theme" uid="uid://w6rxo3pcpy3t" path="res://themes/default_theme.tres" id="1_56xi4"]
[ext_resource type="StyleBox" uid="uid://dd8ms62mx5lni" path="res://themes/pokepanel.tres" id="2_kp0e5"]
[ext_resource type="Script" path="res://scripts/gui/horizontal_option_list.gd" id="3_0p2vl"]
[ext_resource type="PackedScene" uid="uid://q3sapeqvrsji" path="res://scenes/components/horizontal_option_input.tscn" id="4_7caam"]
[ext_resource type="AudioStream" uid="uid://dldiopeensi5" path="res://assets/sounds/sfx/general/SFX_PRESS_AB.wav" id="5_g6k0j"]

[node name="HorizontalOptionList" type="PanelContainer"]
offset_left = 3.0
offset_top = 7.0
offset_right = 122.0
offset_bottom = 61.0
theme = ExtResource("1_56xi4")
theme_override_styles/panel = ExtResource("2_kp0e5")
script = ExtResource("3_0p2vl")
options = "NEW GAME
OPTIONS
CREDITS
EXIT"
active = true

[node name="Options" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 0
text = " NEW GAME

 OPTIONS

 CREDITS

 EXIT"

[node name="HorizontalOptionInput" parent="." instance=ExtResource("4_7caam")]

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_g6k0j")

[connection signal="action_button_pressed" from="HorizontalOptionInput" to="." method="_play_sfx"]
[connection signal="canceled" from="HorizontalOptionInput" to="." method="_return"]
[connection signal="moved" from="HorizontalOptionInput" to="." method="move_cursor"]
[connection signal="selected" from="HorizontalOptionInput" to="." method="_select_current_option"]
